tests/baselines/reference/parserIndexMemberDeclaration7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration7.ts (1 errors) ====
    class C {
       public [x: string]: string;
       ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }